perbaiki url images

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <div class="course bg-white h-100 align-self-stretch">
               <figure class="m-0">
-                <a href="course-single.html"><img src="assetOneSchool/images/img_2.jpg" alt="Image" class="img-fluid"></a>
+                <a href="course-single.html"><img src="images/img_2.jpg" alt="Image" class="img-fluid"></a>
               </figure>
               <div class="course-inner-text py-4 px-4">
                 <span class="course-price">$99</span>
@@ -165,7 +165,7 @@
 
             <div class="course bg-white h-100 align-self-stretch">
               <figure class="m-0">
-                <a href="course-single.html"><img src="assetOneSchool/images/img_4.jpg" alt="Image" class="img-fluid"></a>
+                <a href="course-single.html"><img src="images/img_4.jpg" alt="Image" class="img-fluid"></a>
               </figure>
               <div class="course-inner-text py-4 px-4">
                 <span class="course-price">$20</span>
@@ -181,7 +181,7 @@
 
             <div class="course bg-white h-100 align-self-stretch">
               <figure class="m-0">
-                <a href="course-single.html"><img src="assetOneSchool/images/img_5.jpg" alt="Image" class="img-fluid"></a>
+                <a href="course-single.html"><img src="images/img_5.jpg" alt="Image" class="img-fluid"></a>
               </figure>
               <div class="course-inner-text py-4 px-4">
                 <span class="course-price">$99</span>
@@ -197,7 +197,7 @@
 
             <div class="course bg-white h-100 align-self-stretch">
               <figure class="m-0">
-                <a href="course-single.html"><img src="assetOneSchool/images/img_6.jpg" alt="Image" class="img-fluid"></a>
+                <a href="course-single.html"><img src="images/img_6.jpg" alt="Image" class="img-fluid"></a>
               </figure>
               <div class="course-inner-text py-4 px-4">
                 <span class="course-price">$99</span>
